<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="415dp"
        android:layout_height="335dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/cap1" />

    <!--falta corrigir margin top -->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="397dp"
        android:layout_height="255dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image"
        app:layout_constraintVertical_bias="0.18">

        <TextView
            android:id="@+id/textHistory"
            android:layout_width="403dp"
            android:layout_height="wrap_content"

            android:background="@color/design_default_color_background"
            android:gravity="fill_horizontal"
            android:justificationMode="inter_word"
            android:maxLines="100"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/textcap1_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/play_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_image" />

    </ScrollView>

    <Button
        android:id="@+id/play_button"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ButtonNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ButtonHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:background="@color/design_default_color_background"
        android:text="@string/title_textcap1_1"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>